--- a/reference-provider-details-api/build.gradle
+++ b/reference-provider-details-api/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.18.0'
     // Upgrade to fix vulnerabilities in tomcat-embed-core
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.9'
+    // Upgrade to fix vulnerabilities in logback
+    implementation 'ch.qos.logback:logback-core:1.5.19'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
