--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'org.springframework:spring-webmvc:6.2.11'
     // Upgrade to fix vulnerabilities in spring-core
     implementation 'org.springframework:spring-core:6.2.11'
+    // Upgrade to fix CVE-2025-11226 vulnerability in logback-core
+    implementation 'ch.qos.logback:logback-core:1.5.19'
 
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
