--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -33,23 +33,29 @@ dependencyManagement {
         // Upgrade to fix vulnerabilities in netty
         mavenBom('io.netty:netty-bom:4.2.5.Final')
     }
+    dependencies {
+        // Force dependency versions to fix vulnerabilities
+        dependencySet(group: 'ch.qos.logback', version: '1.5.19') {
+            entry 'logback-classic'
+            entry 'logback-core'
+        }
+        dependencySet(group: 'org.apache.tomcat.embed', version: '11.0.12') {
+            entry 'tomcat-embed-core'
+            entry 'tomcat-embed-websocket'
+        }
+        dependencySet(group: 'org.springframework', version: '6.2.11') {
+            entry 'spring-core'
+            entry 'spring-web'
+            entry 'spring-webmvc'
+            entry 'spring-context'
+        }
+        dependency 'org.yaml:snakeyaml:2.0'
+        dependency 'org.apache.commons:commons-lang3:3.18.0'
+        dependency 'org.springframework.boot:spring-boot:3.5.5'
+    }
 }
 
 dependencies {
-
-    /**
-     * Upgrades to resolve vulnerabilities
-     */
-    // Upgrade to fix Uncontrolled Recursion vulnerability in commons-lang3
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-    // Upgrade to fix CVE-2025-55752, CVE-2025-55754 and CVE-2025-61795 vulnerability
-    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.12'
-    // Upgrade to fix vulnerabilities in spring-webmvc
-    implementation 'org.springframework:spring-webmvc:6.2.11'
-    // Upgrade to fix vulnerabilities in spring-core
-    implementation 'org.springframework:spring-core:6.2.11'
-    // Upgrade to fix CVE-2025-11226 vulnerability in logback-core
-    implementation 'ch.qos.logback:logback-core:1.5.19'
 
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
